WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243638
[GStreamer][MediaStream] Video resizing fixes
https://bugs.webkit.org/show_bug.cgi?id=243638
Summary
[GStreamer][MediaStream] Video resizing fixes
Philippe Normand
Reported
2022-08-07 02:24:49 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-08-07 02:31:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3086
EWS
Comment 2
2022-08-10 04:15:30 PDT
Committed
253289@main
(8a44e02b866a): <
https://commits.webkit.org/253289@main
> Reviewed commits have been landed. Closing PR #3086 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-08-10 04:16:18 PDT
<
rdar://problem/98441116
>
Adrian Perez
Comment 4
2022-08-10 05:14:30 PDT
This broke debug builds, see
bug #243781
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug