[GStreamer][MediaStream] Video resizing fixes https://bugs.webkit.org/show_bug.cgi?id=243638

Reviewed by Xabier Rodriguez-Calvar.

Resizing a media track from JS triggers a call to RealtimeMediaSource::setSize() but that doesn't
affect the mock video source per-se because it is wrapped in a RealtimeVideoSource. On Apple
platforms the RealtimeVideoSource actually resizes the video frame, but keeps the captureSize
un-modified. So the RealtimeVideoSource::adaptVideoFrame() method is also now implemented for
GStreamer ports.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
(WebCore::setBufferFields):
(WebCore::VideoFrameGStreamer::createFromPixelBuffer):
(WebCore::VideoFrameGStreamer::resizeTo):
* Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.h:
* Source/WebCore/platform/mediastream/RealtimeVideoSource.cpp:
(WebCore::RealtimeVideoSource::adaptVideoFrame):
(WebCore::RealtimeVideoSource::videoFrameAvailable):
* Source/WebCore/platform/mediastream/RealtimeVideoSource.h:

Canonical link: https://commits.webkit.org/253289@main